# c_practicum

./: CMakeLists.txt  README.md  main.c
algo-src/: add-two-numbers.c  permutations-of-strings.c  remove-duplicates-from-sorted-list.c  words_to_array.c
include/: bitwise_operators.h  num-to-arr.h  post-transition.h  printing-tokens.h  printing_pattern-2.h  recursion1.h  reverse-array.h  triangles_sorting.h  words_to_array.h
src/: bitwise_operators.c  num-to-arr.c  post-transition.c  printing-tokens.c  printing_pattern-2.c  recursion1.c  reverse-array.c  triangles_sorting.c
